--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,17 +2,17 @@ project:
   type: website
 
 website:
-  title: "quarto-blog-michael-luu"
+  title: "Michael Luu, MPH"
   navbar:
     right:
-      - about.qmd
+      - blog.qmd
       - icon: github
         href: https://github.com/
       - icon: twitter
         href: https://twitter.com
 format:
   html:
-    theme: cosmo
+    theme: litera
     css: styles.css
 
 editor: visual
