--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,6 +6,7 @@ website:
   navbar:
     right:
       - blog.qmd
+      - projects.qmd
       - publications.qmd
       - icon: github
         href: https://github.com/mluu921
